# signal

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: publish.yml
src/quantium_signal/: __init__.py  signal.py
