[metadata]
name = quantium-signal
version = attr: quantium_signal.__version__
author = Artyom Vancyan
author_email = artyom.vancyan2000@gmail.com
description = Unlock TradingView alerts without the premium plan using Quantium Signal.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code=https://github.com/quantium-ai/signal/
keywords =
    okx
    free
    bybit
    signal
    crypto
    pionex
    binance
    tradingview
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License

[options]
packages =
    quantium_signal
install_requires =
    aiosmtpd>=1.4.6
    cloudscraper>=1.2.71
include_package_data = yes
python_requires = >=3.8
package_dir =
    =src
zip_safe = no